# ZitterWalk

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  theory.rst  tutorial.rst
docs/source/_static/: custom.css
docs/source/_templates/: footer.html
docs/source/api/: zitterwalk.coin.rst  zitterwalk.graph.rst  zitterwalk.rst  zitterwalk.viz.rst  zitterwalk.walk.rst  zitterwalk.walker.rst
examples/: 01_fundamentos.ipynb  anderson_localization.py  bloch_animation.py  bloch_compare.py  bloch_oscillations.py  coin_dispersion.py  cycle_animation.py  cycle_nodes_animation.py  dirac_bloch.py  electric_revivals.py  fundamental.ipynb  hitting_time.py  klein_paradox.py  line_animation.py  line_hadamard.py  quantum_search.py  zitterbewegung.py
quantum_walks/: __init__.py  coin.py  graph.py  walker.py
tests/: test_walk.py
zitterwalk/: __init__.py  coin.py  graph.py  viz.py  walk.py  walker.py
