[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-walks"
version = "0.1.0"
description = "Un paquete simple para simular Discrete-Time Quantum Walks (DTQW)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["quantum_walks*"]
